# instagram

./: .gitignore  README.md  docker-compose.yml
core/: pyproject.toml
core/core/decorators/: mongo_db_helper.py
core/core/models/: Image.py  User.py
core/core/schemas/: ImageSchema.py  UserSchema.py
core/core/utils/: auth.py  redis.py
services/front_end_service/: Dockerfile  constants.js  package-lock.json  package.json
services/front_end_service/.devcontainer/: devcontainer.json
services/front_end_service/app/: store.js
services/front_end_service/src/: App.jsx  main.jsx
services/front_end_service/src/assets/: FABButton.jsx  SnackBar.jsx  theme.js
services/front_end_service/src/auth/: Login.jsx  Signup.jsx
services/front_end_service/src/features/global/: snackbar.js
services/front_end_service/src/images/: AddImageModal.jsx  HeartIconLabel.jsx  Home.jsx  ImageItem.jsx  ImageUpload.jsx
services/front_end_service/src/users/: MinifiedUserInfo.jsx  UserInfo.jsx  UserProfile.jsx
services/image_service/: Dockerfile  main.py  pyproject.toml
services/image_service/.devcontainer/: devcontainer.json
services/image_service/lib/utils/: s3_util.py
services/image_service/routes/: images.py
services/like_service/: Dockerfile  main.py  pyproject.toml
services/like_service/.devcontainer/: devcontainer.json
services/runner_service/: main.py
services/user_service/: Dockerfile  main.py  pyproject.toml
services/user_service/.devcontainer/: devcontainer.json
services/user_service/lib/: s3_utils.py
services/user_service/lib/schemas/: user_schema.py
services/user_service/routes/: login.py  user.py
