[tool.poetry]
name = "image-service"
version = "0.1.0"
description = ""
authors = ["srivatsan177 <ksrivatsan177@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.0"}
core = {path = "../../core", develop = true}
black = "^23.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
